Feat: Added main container and logo

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+    <div class="main-container">
+        <img src="assets/images/pga_score_logo.png" class="logo" alt="PGA Score Logo">
+    </div>
 
     <script src="assets/js/script.js"></script>
 </body>
