--- a/index.html
+++ b/index.html
@@ -10,8 +10,19 @@
 </head>
 
 <body>
-    <div class="main-container">
+    <div class="info-container">
         <img src="assets/images/pga_score_logo.png" class="logo" alt="PGA Score Logo">
+        <div class="about-container">
+            <p>Welcome to the PGA Score.</p>
+            <p>PGA Score is a card based memory game designed to test both
+                your memory and knowledge of golf. The idea is simple,
+                depending on your choice of course (difficulty) a number of
+                cards will display, face down, in the game area.
+            </p>
+            <p>Each card will have a corresponding match, match all pairs to win
+                the game.
+            </p>
+        </div>
     </div>
 
     <script src="assets/js/script.js"></script>
