Feat: Added course *game mode) content

--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
                 the game.
             </p>
         </div>
+        <div class="course-container">
+            <div class="course-about easy-difficulty">
+                <p><b>The K Club (Easy)</b></p>
+                <p></p>
+            </div>
+            <div class="course-about hard-difficulty">
+                <p><b>Augusta (Hard)</b></p>
+                <p></p>
+            </div>
+        </div>
     </div>
 
     <script src="assets/js/script.js"></script>
