Feat: Added text to each course (game type)

--- a/index.html
+++ b/index.html
@@ -26,11 +26,15 @@
         <div class="course-container">
             <div class="course-about easy-difficulty">
                 <p><b>The K Club (Easy)</b></p>
-                <p></p>
+                <p>This course contains 8 cards, 4 matching pairs. The player
+                    must match all 4 pairs to win.
+                </p>
             </div>
             <div class="course-about hard-difficulty">
                 <p><b>Augusta (Hard)</b></p>
-                <p></p>
+                <p>This course contains 12 cards, 6 matching pairs. The player
+                    must match all 6 pairs to win.
+                </p>
             </div>
         </div>
     </div>
