Feat: changed div to aside element. Moved image to div and removed some img styling

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-    <div class="info-container">
-        <img src="assets/images/pga_score_logo.png" class="logo" alt="PGA Score Logo">
+    <aside class="info-container">
         <div class="about-container">
+            <img src="assets/images/pga_score_logo.png" class="logo" alt="PGA Score Logo">
             <p>Welcome to the PGA Score.</p>
             <p>PGA Score is a card based memory game designed to test both
                 your memory and knowledge of golf. The idea is simple,
@@ -37,6 +37,11 @@
                 </p>
             </div>
         </div>
+        <button class="btn">Lets Play!</button>
+    </aside>
+
+    <div class="game-area">
+
     </div>
 
     <script src="assets/js/script.js"></script>
