Feat: Added footer and styling

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <script src="https://kit.fontawesome.com/5b3d4c03ab.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css">
     <title>PGA Score | Home</title>
 </head>
@@ -40,9 +40,13 @@
         <button class="btn">Lets Play!</button>
     </aside>
 
-    <div class="game-area">
+    <!-- <div class="game-area">
 
-    </div>
+    </div> -->
+
+    <footer>
+        <i class="fa-brands fa-github"></i>
+    </footer>
 
     <script src="assets/js/script.js"></script>
 </body>
