Refactor: removed class info-container

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <aside class="info-container">
+    <aside>
         <div class="about-container">
             <img src="assets/images/pga_score_logo.png" class="logo" alt="PGA Score Logo">
             <p>Welcome to the PGA Score.</p>
