Feat: Added a section for the game area

--- a/index.html
+++ b/index.html
@@ -10,39 +10,42 @@
 </head>
 
 <body>
-    <aside>
-        <div class="about-container">
-            <img src="assets/images/pga_score_logo.png" class="logo" alt="PGA Score Logo">
-            <p>Welcome to the PGA Score.</p>
-            <p>PGA Score is a card based memory game designed to test both
-                your memory and knowledge of golf. The idea is simple,
-                depending on your choice of course (difficulty) a number of
-                cards will display, face down, in the game area.
-            </p>
-            <p>Each card will have a corresponding match, match all pairs to win
-                the game.
-            </p>
-        </div>
-        <div class="course-container">
-            <div class="course-about easy-difficulty">
-                <p><b>The K Club (Easy)</b></p>
-                <p>This course contains 8 cards, 4 matching pairs. The player
-                    must match all 4 pairs to win.
+    <section class="main-contain">
+        <h1 class="hidden">Welcome to the PGA Score</h1>
+        <aside>
+            <div class="about-container">
+                <img src="assets/images/pga_score_logo.png" class="logo" alt="PGA Score Logo">
+                <p>Welcome to the PGA Score.</p>
+                <p>PGA Score is a card based memory game designed to test both
+                    your memory and knowledge of golf. The idea is simple,
+                    depending on your choice of course (difficulty) a number of
+                    cards will display, face down, in the game area.
+                </p>
+                <p>Each card will have a corresponding match, match all pairs to win
+                    the game.
                 </p>
             </div>
-            <div class="course-about hard-difficulty">
-                <p><b>Augusta (Hard)</b></p>
-                <p>This course contains 12 cards, 6 matching pairs. The player
-                    must match all 6 pairs to win.
-                </p>
+            <div class="course-container">
+                <div class="course-about easy-difficulty">
+                    <p><b>The K Club (Easy)</b></p>
+                    <p>This course contains 8 cards, 4 matching pairs. The player
+                        must match all 4 pairs to win.
+                    </p>
+                </div>
+                <div class="course-about hard-difficulty">
+                    <p><b>Augusta (Hard)</b></p>
+                    <p>This course contains 12 cards, 6 matching pairs. The player
+                        must match all 6 pairs to win.
+                    </p>
+                </div>
             </div>
-        </div>
-        <button class="btn">Lets Play!</button>
-    </aside>
+            <button class="btn">Lets Play!</button>
+        </aside>
 
-    <!-- <div class="game-area">
+        <section class="game-area">
 
-    </div> -->
+        </section>
+    </section>
 
     <footer>
         <i class="fa-brands fa-github"></i>
