--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="main-contain">
         <h1 class="hidden">Welcome to the PGA Score</h1>
         <aside>
-            <div class="about-container">
+            <section class="about-container">
                 <img src="assets/images/pga_score_logo.png" class="logo" alt="PGA Score Logo">
                 <p>Welcome to the PGA Score.</p>
                 <p>PGA Score is a card based memory game designed to test both
@@ -24,25 +24,27 @@
                 <p>Each card will have a corresponding match, match all pairs to win
                     the game.
                 </p>
-            </div>
-            <div class="course-container">
-                <div class="course-about easy-difficulty">
+            </section>
+            <section class="course-container">
+                <section class="course-about easy-difficulty">
                     <p><b>The K Club (Easy)</b></p>
                     <p>This course contains 8 cards, 4 matching pairs. The player
                         must match all 4 pairs to win.
                     </p>
-                </div>
-                <div class="course-about hard-difficulty">
+                </section>
+                <section class="course-about hard-difficulty">
                     <p><b>Augusta (Hard)</b></p>
                     <p>This course contains 12 cards, 6 matching pairs. The player
                         must match all 6 pairs to win.
                     </p>
-                </div>
-            </div>
+                </section>
+            </section>
             <button class="btn">Lets Play!</button>
         </aside>
 
         <section class="game-area">
+            <h1>Game area</h1>
+
 
         </section>
     </section>
