Refactor: Reverted one section to be a div. Updated H1 to H2 in game area

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <aside>
             <section class="about-container">
                 <img src="assets/images/pga_score_logo.png" class="logo" alt="PGA Score Logo">
-                <p>Welcome to the PGA Score.</p>
+                <h2>Welcome to the PGA Score.</h2>
                 <p>PGA Score is a card based memory game designed to test both
                     your memory and knowledge of golf. The idea is simple,
                     depending on your choice of course (difficulty) a number of
@@ -25,25 +25,25 @@
                     the game.
                 </p>
             </section>
-            <section class="course-container">
+            <div class="course-container">
                 <section class="course-about easy-difficulty">
-                    <p><b>The K Club (Easy)</b></p>
+                    <h2><b>The K Club (Easy)</b></h2>
                     <p>This course contains 8 cards, 4 matching pairs. The player
                         must match all 4 pairs to win.
                     </p>
                 </section>
                 <section class="course-about hard-difficulty">
-                    <p><b>Augusta (Hard)</b></p>
+                    <h2><b>Augusta (Hard)</b></h2>
                     <p>This course contains 12 cards, 6 matching pairs. The player
                         must match all 6 pairs to win.
                     </p>
                 </section>
-            </section>
+            </div>
             <button class="btn">Lets Play!</button>
         </aside>
 
         <section class="game-area">
-            <h1>Game area</h1>
+            <h2>Game area</h2>
 
 
         </section>
