Feat: Added main element to index.html

--- a/index.html
+++ b/index.html
@@ -10,44 +10,46 @@
 </head>
 
 <body>
-    <section class="main-contain">
-        <h1 class="hidden">Welcome to the PGA Score</h1>
-        <aside>
-            <section class="about-container">
-                <img src="assets/images/pga_score_logo.png" class="logo" alt="PGA Score Logo">
-                <h2>Welcome to the PGA Score.</h2>
-                <p>PGA Score is a card based memory game designed to test both
-                    your memory and knowledge of golf. The idea is simple,
-                    depending on your choice of course (difficulty) a number of
-                    cards will display, face down, in the game area.
-                </p>
-                <p>Each card will have a corresponding match, match all pairs to win
-                    the game.
-                </p>
+    <main>
+        <section class="main-contain">
+            <h1 class="hidden">Welcome to the PGA Score</h1>
+            <aside>
+                <section class="about-container">
+                    <img src="assets/images/pga_score_logo.png" class="logo" alt="PGA Score Logo">
+                    <h2>Welcome to the PGA Score.</h2>
+                    <p>PGA Score is a card based memory game designed to test both
+                        your memory and knowledge of golf. The idea is simple,
+                        depending on your choice of course (difficulty) a number of
+                        cards will display, face down, in the game area.
+                    </p>
+                    <p>Each card will have a corresponding match, match all pairs to win
+                        the game.
+                    </p>
+                </section>
+                <div class="course-container">
+                    <section class="course-about easy-difficulty">
+                        <h2><b>The K Club (Easy)</b></h2>
+                        <p>This course contains 8 cards, 4 matching pairs. The player
+                            must match all 4 pairs to win.
+                        </p>
+                    </section>
+                    <section class="course-about hard-difficulty">
+                        <h2><b>Augusta (Hard)</b></h2>
+                        <p>This course contains 12 cards, 6 matching pairs. The player
+                            must match all 6 pairs to win.
+                        </p>
+                    </section>
+                </div>
+                <button class="btn">Lets Play!</button>
+            </aside>
+
+            <section class="game-area">
+                <h2>Game area</h2>
+
+
             </section>
-            <div class="course-container">
-                <section class="course-about easy-difficulty">
-                    <h2><b>The K Club (Easy)</b></h2>
-                    <p>This course contains 8 cards, 4 matching pairs. The player
-                        must match all 4 pairs to win.
-                    </p>
-                </section>
-                <section class="course-about hard-difficulty">
-                    <h2><b>Augusta (Hard)</b></h2>
-                    <p>This course contains 12 cards, 6 matching pairs. The player
-                        must match all 6 pairs to win.
-                    </p>
-                </section>
-            </div>
-            <button class="btn">Lets Play!</button>
-        </aside>
-
-        <section class="game-area">
-            <h2>Game area</h2>
-
-
         </section>
-    </section>
+    </main>
 
     <footer>
         <i class="fa-brands fa-github"></i>
