--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
                 </section>
                 <div class="course-container">
                     <section class="course-about easy-difficulty">
-                        <h2><b>The K Club (Easy)</b></h2>
+                        <h2>The K Club (Easy)</h2>
                         <p>This course contains 8 cards, 4 matching pairs. The player
                             must match all 4 pairs to win.
                         </p>
                     </section>
                     <section class="course-about hard-difficulty">
-                        <h2><b>Augusta (Hard)</b></h2>
+                        <h2>Augusta (Hard)</h2>
                         <p>This course contains 12 cards, 6 matching pairs. The player
                             must match all 6 pairs to win.
                         </p>
