Refactor: changed working for both of the course descriptions

--- a/index.html
+++ b/index.html
@@ -28,15 +28,17 @@
                 </section>
                 <div class="course-container">
                     <section class="course-about easy-difficulty">
-                        <h2>The K Club (Easy)</h2>
-                        <p>This course contains 8 cards, 4 matching pairs. The player
-                            must match all 4 pairs to win.
+                        <h2>The K Club</h2>
+                        <p>This course contains 8 cards, 4 matching pairs.
+                            It has a difficulty of easy. The player must match
+                            all 4 pairs to win.
                         </p>
                     </section>
                     <section class="course-about hard-difficulty">
-                        <h2>Augusta (Hard)</h2>
-                        <p>This course contains 12 cards, 6 matching pairs. The player
-                            must match all 6 pairs to win.
+                        <h2>Augusta</h2>
+                        <p>This course contains 12 cards, 6 matching pairs.
+                            It has a difficulty of hard. The player must match
+                            all 6 pairs to win.
                         </p>
                     </section>
                 </div>
