Feat: Added header element to index.html. Added styling.

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 </head>
 
 <body>
+    <header>
+        <h1 class="hidden">Welcome to the PGA Score</h1>
+        <img src="assets/images/pga_score_logo.png" class="logo" alt="PGA Score Logo">
+    </header>
     <main>
         <section class="main-contain">
-            <h1 class="hidden">Welcome to the PGA Score</h1>
             <aside>
-                <img src="assets/images/pga_score_logo.png" class="logo" alt="PGA Score Logo">
                 <section class="about-container">
                     <h2>Welcome to the PGA Score.</h2>
                     <p>PGA Score is a card based memory game designed to test both
