Comment: Added comment for W3 Validation

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     </header>
     <main>
         <section class="main-contain">
+            <!-- 
+                H2 is hidden to minimize the W3 Validator warning 
+                "Section lacks heading."
+            -->
+            <h2 class="hidden">Welcome to the PGA Score</h2>
             <aside>
                 <section class="about-container">
                     <h2>Welcome to the PGA Score.</h2>
