Feat: Added href link to main logo that navigates to home page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
     <header>
         <h1 class="hidden">Welcome to the PGA Score</h1>
-        <img src="assets/images/pga_score_logo.png" class="logo" alt="PGA Score Logo">
+        <a href="index.html" aria-label="Link to home page">
+            <img src="assets/images/pga_score_logo.png" class="logo" alt="PGA Score Logo">
+        </a>
     </header>
     <main>
         <section class="main-contain">
