--- a/index.html
+++ b/index.html
@@ -63,7 +63,10 @@
     </main>
 
     <footer>
-        <i class="fa-brands fa-github"></i>
+        <a href="https://github.com/MarkClinton/pga-score" target="_blank" rel="noopener"
+            aria-label="Visit the GitHub repo (opens in a new tab)">
+            <i class="fa-brands fa-github"></i>
+        </a>
     </footer>
 
     <script src="assets/js/script.js"></script>
