--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@
                 <button class="btn">Lets Play!</button>
             </aside>
 
-            <section class="game-area">
+            <section class="game-contain">
                 <h2>Game area</h2>
+                <div class="game-area">
 
-
+                </div>
             </section>
         </section>
     </main>
