--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </aside>
 
             <section class="game-contain">
-                <h2>Game area</h2>
+                <h2 class="hidden">Game area</h2>
                 <div class="game-area">
 
                 </div>
