Feat: Adding Window.load function. Added event listener to button

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         </p>
                     </section>
                 </div>
-                <button class="btn">Lets Play!</button>
+                <button class="btn" id="start-game-btn">Lets Play!</button>
             </aside>
 
             <section class="game-contain">
