Style: added flex to game-area to wrap multiple cards

--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
                         <img class="front-face" src="assets/images/golfers/john_daly.png" alt="John Daly">
                         <img class="back-face" src="assets/images/back_of_card.jpg" alt="Back of card">
                     </div>
+                    <div class="card" data-card="2">
+                        <img class="front-face" src="assets/images/golfers/john_daly.png" alt="John Daly">
+                        <img class="back-face" src="assets/images/back_of_card.jpg" alt="Back of card">
+                    </div>
                 </div>
             </section>
         </section>
