Feat: Added functionality for modal onClick of letsPlay button

--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
                 </div>
             </section>
         </section>
+
+        <div id="gameDetailsModal" class="popup-modal">
+            <div class="popup-modal-content">
+                <span class="modal-close">&times;</span>
+                <p>Some text in the Modal..</p>
+            </div>
+        </div>
     </main>
 
     <footer>
