Feat: Added eventListener and function for btn start game

--- a/index.html
+++ b/index.html
@@ -65,7 +65,18 @@
         <div id="gameDetailsModal" class="popup-modal">
             <div class="popup-modal-content">
                 <span class="modal-close">&times;</span>
-                <p>Some text in the Modal..</p>
+                <h2>Getting your clubs ready...</h2>
+                <p>Enter your name and course you wish to play.</p>
+
+                <form id="UserGameDetails" target="_self">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name"><br>
+
+                    <label for="course">Course:</label>
+                    <input type="text" id="course" name="course"><br>
+
+                    <input type="submit" value="Submit">
+                </form>
             </div>
         </div>
     </main>
