Refactor: updated some class names. Added resizing for screens < 1200px

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
             <section class="game-contain">
                 <h2 class="hidden">Game area</h2>
-                <div class="userDisplay"></div>
+                <div class="user-display"></div>
                 <div class="game-area">
 
                 </div>
@@ -69,7 +69,7 @@
                 <h2>Get your clubs ready.</h2>
                 <p>Enter your name and course you wish to play.</p>
 
-                <form id="UserGameDetails" class="UserGameDetails" target="_self">
+                <form id="UserGameDetails" class="user-game-details" target="_self">
                     <label for="name">
                         <p>Name</p>
                         <input type="text" class="form-input" id="name" name="name" minlength="3" maxlength="15"
