Feat: Added modal popup for when game completes

--- a/index.html
+++ b/index.html
@@ -91,6 +91,16 @@
                 </form>
             </div>
         </div>
+
+        <div id="gameEndModal" class="popup-modal">
+            <div class="popup-modal-content">
+                <span class="modal-close">&times;</span>
+                <h3>You Win!</h3>
+                <p>Congratulations you have successfully matched all the cards
+                    with their corresponding match!
+                </p>
+            </div>
+        </div>
     </main>
 
     <footer>
