--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
             <div class="popup-modal-content">
                 <span class="modal-close">&times;</span>
                 <h3>You Win!</h3>
-                <p>Congratulations you have successfully matched all the cards
-                    with their corresponding match!
+                <p>
+                    Congratulations you have successfully matched all the cards!
                 </p>
             </div>
         </div>
