Feat: Added Play Again button to give user functionality to restart game when they win

--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
                 <p>
                     Congratulations you have successfully matched all the cards!
                 </p>
+                <br>
+                <button class="btn red-btn" id="restartGame">Play Again</button>
             </div>
         </div>
     </main>
