Refactor: updated id name for game start button

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         </p>
                     </section>
                 </div>
-                <button class="btn" id="start-game-btn">Start Game</button>
+                <button class="btn" id="startGameBtn">Start Game</button>
             </aside>
 
             <section class="game-contain">
