Feat: updated id naming for user game details

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <h2>Get your clubs ready.</h2>
                 <p>Enter your name and course you wish to play.</p>
 
-                <form id="UserGameDetails" class="user-game-details" target="_self">
+                <form id="userGameDetails" class="user-game-details" target="_self">
                     <label for="name">
                         <p>Name</p>
                         <input type="text" class="form-input" id="name" name="name" minlength="3" maxlength="15"
