Feat: Add meta tags

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Meta tags for search engines-->
+    <meta name="description" content="PGA Score is a memory based web game with a golfing theme">
+    <meta name="keywords" content="PGA, tour, golf, memory, game">
+    <meta name="author" content="Mark Clinton">
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/5b3d4c03ab.js" crossorigin="anonymous"></script>
     <!-- Stylesheet -->
