Refactor: Change aria-label text

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <header>
         <h1 class="hidden">Welcome to the PGA Score</h1>
-        <a href="index.html" aria-label="Link to home page">
+        <a href="index.html" aria-label="Go to home page">
             <img src="assets/images/pga_score_logo.png" class="logo" alt="PGA Score Logo">
         </a>
     </header>
