Refactor: Change button text to Start New Game

--- a/index.html
+++ b/index.html
@@ -28,10 +28,8 @@
     </header>
     <main>
         <section class="main-contain">
-            <!-- 
-                H2 is hidden to minimize the W3 Validator warning 
-                "Section lacks heading."
-            -->
+            <!-- H2 is hidden to minimize the W3 Validator warning 
+                "Section lacks heading." -->
             <h2 class="hidden">Welcome to the PGA Score</h2>
             <aside>
                 <section class="about-container">
@@ -61,7 +59,7 @@
                         </p>
                     </section>
                 </div>
-                <button class="btn" id="startGameBtn">Start Game</button>
+                <button class="btn" id="startGameBtn">Start New Game</button>
             </aside>
 
             <section class="game-contain">
