Feat: add text warning for smaller screens

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
                     <p>Each card will have a corresponding match, match all pairs to win
                         the game.
                     </p>
+                    <p class="mobile-warning">Please consider using a larger screen for the
+                        best game experience</p>
                 </section>
                 <div class="course-container">
                     <section class="course-about easy-difficulty">
