--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header>
         <h1 class="hidden">Welcome to the PGA Score</h1>
         <a href="index.html" aria-label="Go to home page">
-            <img src="assets/images/pga_score_logo.png" class="logo" alt="PGA Score Logo">
+            <img src="assets/images/pga_score_logo.webp" class="logo" alt="PGA Score Logo">
         </a>
     </header>
     <!-- Main -->
