--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                 <section class="about-container">
                     <h2>Welcome to the PGA Score.</h2>
                     <p>PGA Score is a card based memory game designed to test both
-                        your memory and knowledge of golf. The idea is simple,
-                        depending on your choice of course (difficulty) a number of
-                        cards will display, face down, in the game area.
+                        your memory and knowledge of golf. </p>
+                    <p>The idea is simple,depending on your choice of course (difficulty)
+                        a number of cards will display, face down, in the game area.
                     </p>
                     <p>Each card will have a corresponding match, match all pairs to win
                         the game.
