--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     </p>
                     <p>
                         <label for="course">Course</label>
-                        <select class="form-input" id="course" class="form-input" required>
+                        <select id="course" class="form-input" required>
                             <option value="">Choose course..</option>
                             <option value="4">The K Club (Easy)</option>
                             <option value="6">Augusta (Hard)</option>
