Feat: add aria labels

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         </p>
                     </section>
                 </div>
-                <button class="btn" id="startGameBtn">Start New Game</button>
+                <button aria-label="Start New Game" class="btn" id="startGameBtn">Start New Game</button>
             </aside>
             <section class="game-contain">
                 <h2 class="hidden">Game area</h2>
@@ -104,7 +104,7 @@
                     Congratulations you have successfully matched all the cards!
                 </p>
                 <br>
-                <button class="btn red-btn" id="restartGame">Play Again</button>
+                <button aria-label="Play Again" class="btn red-btn" id="restartGame">Play Again</button>
             </div>
         </div>
     </main>
